# DSC-Twitch-Sentinel

./: README.md  pyproject.toml
client/: .env.example  install_cert.sh  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  index.css
server/: .env.example  app.py  requirements.txt
server/sentiment_analysis/: analysis_queue.py  job_queue.py  main.py
server/twitch_api/: __init__.py  main.py  utils.py  utils_classes.py
server/utils/: client.py  config.py  sockets.py  stream_context.py  websocket_manager.py
